# text-layout-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
benchmarks/: layout-bench.js  package.json
core/: Cargo.toml  build.rs  wasm-pack.toml
core/src/: font_fallback.rs  kinsoku_map.rs  layout_engine.rs  lib.rs  line_break.rs
core/tests/: font_fallback_test.rs  integration_test.rs  line_break_test.rs  performance_test.rs  pipeline_test.rs
docs/: index.md  package.json
docs/architecture/: SoA-layout.md  pipeline-overview.md  zero-allocation.md
docs/guide/: api-reference.md  getting-started.md  performance-tips.md
scripts/: build.sh  deploy.sh  test.sh
web/: package.json  vite.config.js
web/public/fonts/: README.md
web/src/: gpu_bridge.js  index.html  main.js  texture_atlas.js
